Add optional parameter to avoid SDK rebuild
This is required to support background work in VS2019
